objects/ASI_CRM_JP_Sales_Order_History__c.object
<CustomObject>
    <description>For JPCRM3</description>
    <fields>
        <fullName>ASI_CRM_Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Branch_Plant__c</fullName>
        <label>Branch / Plant</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer_PO_No__c</fullName>
        <label>Customer PO No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Delivery_Time__c</fullName>
        <label>Delivery Instruction 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Freight_Code__c</fullName>
        <label>Freight Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Order_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Price_Effective_Date__c</fullName>
        <label>Price Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Mailing_Name__c</fullName>
        <label>Mailing Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Order_Type__c</fullName>
        <label>Order Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Reason_Code__c</fullName>
        <label>Reason Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remark1__c</fullName>
        <label>Remark 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remark2__c</fullName>
        <label>Remark 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remark__c</fullName>
        <label>Delivery Instruction 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Requested_Date__c</fullName>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Route_Code__c</fullName>
        <label>Route Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order (JP)</label>
        <referenceTo>ASI_CRM_JP_Sales_Order__c</referenceTo>
        <relationshipLabel>Sales Order Histories</relationshipLabel>
        <relationshipName>Sales_Order_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Salesman_Code__c</fullName>
        <label>Salesman Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Ship_To__c</fullName>
        <label>Ship To Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sold_To__c</fullName>
        <label>Sold To Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Tax_Area__c</fullName>
        <label>Tax Area</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Tax_Code__c</fullName>
        <label>Tax Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Cancelled_Quantity__c</fullName>
        <label>Total Cancelled Quantity</label>
        <summarizedField>ASI_CRM_JP_Sales_Order_History_Detail__c.ASI_CRM_Quantity_Cancelled__c</summarizedField>
        <summaryForeignKey>ASI_CRM_JP_Sales_Order_History_Detail__c.ASI_CRM_JP_Sales_Order_History__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Sales Order History (JP)</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sales Order Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Order Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>